--- a/src/ale/Extradata_preprocessing.Rmd
+++ b/src/ale/Extradata_preprocessing.Rmd
@@ -11,28 +11,198 @@ set.seed(848)
 ```
 
 ## Load Data
-```{r}
 
-```
 
 ```{r}
-Survey_data = readRDS("../../data/Survey.RData")
+Survey_data = readRDS("../../data/Questionario_eng.RData")
 Quest_data = readRDS("../../data/Questionario.RData")
 ```
 
-##Remove useless cols
-```{r}
-Quest_data<-Quest_data[,-18]
-```
-
 ##Rename cols
+
 ```{r}
 names_cols<-c("età", "sesso", "educazione", "campo.studi", "stato", "libri", "lavoro", "importanza.musica", "genere", "come.ascolti.musica","quando.ascolti.musica", "concerti", "strumento", "sport", "estero", "politica", "hobby", "regione", "abitanti.città", "id" )
 names(Quest_data)<-names_cols
+names(Survey_data)<-names_cols
+```
+
+## Merging dataframes
+```{r}
+Data<-rbind(Quest_data, Survey_data)
 ```
 
 ```{r}
-read.csv("../../data/Questionario Spotify (Risposte) - Risposte del modulo 1 (1).csv")
- 
+dataset_list = readRDS("../../data/data_list.RData")
+id_keep<-names(dataset_list)
+```
+
+we keep only the rows corresponding to people having a proper playlist
+
+```{r}
+filtered_data <- Data[Data$id %in% id_keep, ]
+```
+
+## Adjusting factors
+
+Grammar corrections..
+
+```{r}
+temp<-filtered_data$importanza.musica
+temp[7]="tanto"
+filtered_data$importanza.musica<-temp
+```
+
+```{r}
+temp<-filtered_data$strumento
+temp[11]="piano"
+temp[29]="chitarra"
+filtered_data$strumento<-temp
+```
+
+
+```{r}
+temp<-filtered_data$politica
+temp[c(68)]="Sì molto"
+filtered_data$politica<-temp
+```
+
+```{r}
+temp<-filtered_data$abitanti.città
+temp[c(69)]= "Tra 100.000 e 500.000 abitanti"
+temp[c(64,65,66,67,68,70)]="Più di 500 000 abitanti" 
+temp[1]="Tra 100.000 e 500.000 abitanti"
+filtered_data$abitanti.città<-temp
+```
+
+```{r}
+temp<-filtered_data$estero
+temp[c(1,64,65,66,67,68,69,70)]= "Europa occidentale"
+filtered_data$estero<-temp
+```
+
+People not living in Italy or no longer living in Italy ->"/"
+```{r}
+temp<-filtered_data$regione
+Lombardia<-c(5,9,13,15,17,19,25,27,29,33,35,41,43,45,53,55,59,61,63,4,6,8,12,14,18,20,22,36,40,42,44,46,48,50,52,54,56,58,60,62)
+na<-c(11,23,34,47,64:70)
+Lazio<-c(7,57,28,38)
+Toscana<-c(1,21,37,16,30,31,32,49)
+temp[Lombardia]<-"Lombardia"
+temp[na]="/"
+temp[Lazio]="Lazio"
+temp[Toscana]="Toscana"
+filtered_data$regione<-temp
+```
+
+
+Collecting people playing more then  one instrument
+```{r}
+index<-c(2,28,57,70)
+filtered_data$strumento[index]="2+"
+
+```
+
+Converting to factors
+
+```{r}
+filtered_data$sesso<-as.factor(filtered_data$sesso)
+filtered_data$educazione<-as.factor(filtered_data$educazione)
+filtered_data$campo.studi<-as.factor(filtered_data$campo.studi)
+filtered_data$libri<-as.factor(filtered_data$libri)
+filtered_data$lavoro<-as.factor(filtered_data$lavoro)
+filtered_data$importanza.musica<-as.factor(filtered_data$importanza.musica)
+filtered_data$come.ascolti.musica<-as.factor(filtered_data$come.ascolti.musica)
+filtered_data$strumento<-as.factor(filtered_data$strumento)
+filtered_data$politica<-as.factor(filtered_data$politica)
+filtered_data$abitanti.città<-as.factor(filtered_data$abitanti.città)
+filtered_data$estero<-as.factor(filtered_data$estero)
+filtered_data$regione<-as.factor(filtered_data$regione)
+filtered_data$sport<-as.factor(filtered_data$sport)
+```
+
+Here nothing special, I had to adjust capslocks in order to have unique levels 
+```{r}
+col.stato<-filtered_data$stato
+Italia<- c(1,2,3,4,5,6,8,9,10,12,13,14,15,16,17,18,19,20,21,22,24,25,26,27,28,29,30,31,32,33,35,36,37,38,39,40,41,42,43,44,45,46,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,67)
+Svizzera<-c(7,23)
+Germania<-c(34,70)
+Olanda<-c(47)
+Spagna<-c(11,68,69)
+Canada<-c(64,65,66)
+col.stato[Canada]="Canada"
+col.stato[Italia]="Italia"
+col.stato[Spagna]="Spagna"
+col.stato[Svizzera]="Svizzera"
+
+col.stato<-as.factor(col.stato)
+levels(col.stato)
+```
+```{r}
+filtered_data$stato<-col.stato
+```
+
+removing the guy with only 3 songs in the playlist
+the one with id: "4YjSpxvniwzXvBB"
+
+```{r}
+filtered_data<-filtered_data[-75,]
+```
+
+So far we have:
+id 
+numeric -> età, concerti 
+factors -> anything else
+
+TODO
+cosa non so trattare al momento
+- hobby
+- generi (aspetto divisione tancre)
+- quando ascolti musica
+- sport
+
+
+## Visualize data
+
+```{r}
+summary(filtered_data)
+```
+Save processed data so far
+
+```{r}
+reduced<-filtered_data[,-c(9,11,14,17)]
+```
+
+```{r}
+factor_columns<-c(2,3,4,5,6,7,8,9,11,12,13,14,15)
+cols<-names(reduced[,factor_columns])
+reduced_factors<-reduced[,factor_columns]
+```
+
+
+```{r}
+names<-colnames(reduced_factors)
+do_barplot<-function(i){
+ggplot(as.data.frame(reduced_factors)) + 
+  geom_bar(mapping = aes(x =reduced_factors[[i]], fill = reduced_factors[[i]]))+
+    ggtitle(names[i])}
+
+
+```
+
+regà non mi andava la funzione in un ciclo for
+```{r}
+do_barplot(1)
+do_barplot(2)
+do_barplot(3)
+do_barplot(4)
+do_barplot(5)
+do_barplot(6)
+do_barplot(7)
+do_barplot(8)
+do_barplot(9)
+do_barplot(10)
+do_barplot(11)
+do_barplot(12)
+do_barplot(13)
 ```
 
