--- a/src/depth_analysis_ettore.Rmd
+++ b/src/depth_analysis_ettore.Rmd
@@ -12,8 +12,11 @@ library(fda)
 ```{r}
 survey_data<-readRDS("../data/Surveycleaned.RData")
 numeric_data<-readRDS("../data/data_numeric_cleaned2.RData")
+
+combined_data <- merge(numeric_data, survey_data, by.x = "id", by.y = "id")
 ```
-standardize values *duration* and *year* in order to have consistent analysis
+#standardize values 
+*duration* and *year* in order to have consistent analysis
 ```{r}
 min_max_normalize <- function(x) {
   return((x - min(x)) / (max(x) - min(x)))
@@ -23,18 +26,56 @@ combined_data$duration<-  min_max_normalize(combined_data[,12])
 combined_data$year<-  min_max_normalize(combined_data[,13])
 ```
 
-## Merging dataset
+# fdata function 
 ```{r}
-combined_data <- merge(numeric_data, survey_data, by.x = "id", by.y = "id")
+buil_fData <- function(edf_list,graphics){
+  # common x values
+  my_set = c()
+  for (ecd in edf_list){
+    xx = environment(ecd)$x
+    # Use the unique function to obtain unique elements
+    my_set <- unique(c(xx,my_set))
+  }
+  x_axis = my_set[order(my_set)]
+
+  functions <- list()
+  k=1
+  for (ecd in edf_list){
+    functions[[k]] = list(x =environment(ecd)$x, y = environment(ecd)$y)
+    k = k+1
+  }
+  
+  # Function to extend each function to the common x values
+  extend_function <- function(fn_list, common_x) {
+    extended_functions <- lapply(fn_list, function(fn) {
+      extended_y <- approx(x = fn$x, y = fn$y, 
+                           xout = common_x, 
+                           method = "constant", rule = 2)$y
+      list(x = common_x, y = extended_y)
+    })
+    return(extended_functions)
+  }
+  
+  # Extend each function to the common x values
+  extended_functions <- extend_function(functions, x_axis)
+  observation = c()
+  for (k in 1:length(edf_list)){
+   observation = rbind(observation,extended_functions[[k]]$y)
+  }
+
+  f_data = fData(x_axis,as.matrix(observation))
+    if (graphics){
+    plot(f_data)
+  }
+  return(f_data)
+}
 ```
 
-```{r}
-
-```
 
 ## Ecdf list per person
 ```{r}
 names_cov<-colnames(combined_data)
+f_data_list = list()
 for (i in names_cov[2:13]){
   
   covariate <-i
@@ -44,18 +85,14 @@ for (i in names_cov[2:13]){
     ecdf(person_data[[covariate]])
   })
   
-  plot(NULL, xlim = c(0, 1), ylim = c(0, 1),
-       main = paste("EDF for", covariate),
-       xlab = "Data Values", ylab = "Probability")
-  
-  for (i in seq_along(edf_list)) {
-    lines(edf_list[[i]], lwd = 0.5, cex = 0.1)
-  
-  }
+  f_data = buil_fData(edf_list, 1)
+  f_data_list[[i]] = f_data
 }
 ```
+# come funziona ecdf, extra
 ```{r}
 person_data_year <- sort(combined_data[combined_data$id == unique(combined_data$id)[1],"year" ])
+ex = edf_list[[1]]
 unique(person_data_year) == environment(ex)$x
 ex = edf_list[[1]]
 #summary.stepfun(ex)
@@ -63,30 +100,11 @@ environment(ex)$x
 environment(ex)$y
 
 f_data = fData(environment(ex)$x, environment(ex)$y)
+plot(f_data)
 ```
 
-```{r,warning = FALSE}
-observation = c()
-xgrid = seq(0,1,length.out=10)
-for (ecd in edf_list){
-  xx = environment(ecd)$x
-  yy = environment(ecd)$y
-  knots  = c(quantile(xx, probs=c(seq(0,1,length.out = 10))))
-  model = lm(yy ~ bs(xx, knots=knots, degree=3))
-  
 
-  y_pred   = predict(model, list(x=xgrid), se=T)$fit
-  y_pred <- ifelse(y_pred < 0, 0, y_pred)
-  y_pred <- ifelse(y_pred > 1, 1, y_pred)
-  
-  observation = rbind(observation,y_pred)
-}
 
-f_data = fData(xgrid,as.matrix(observation)[,1:10])
-```
-```{r}
-exx = edf_list[[19]]
-environment(exx)$x
-```
+
 
 
